Remove errors, add XyzActivityLog namespace.